# chat

./: README.md
c++_boost_ncurses/: CMakeLists.txt  README.md  common.cpp  common.hpp
c++_boost_ncurses/client/: client.cpp  common.h  tui.cpp  tui.h
c++_boost_ncurses/server/: server.cpp
cpp_boost_ncurses/client/: common.h  tui.cpp
cpp_boost_ncurses/server/: server.cpp
